--- a/LicentaApp/Views/Shared/Comenzi/LentilaOptions.cshtml
+++ b/LicentaApp/Views/Shared/Comenzi/LentilaOptions.cshtml
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col m12 input-field">
             @Html.DropDownListFor(model => model.Lentila.CodProdus, (SelectList)ViewData[AppConstants.LentilaOptions], "- Selecteaza -", new { @id = "lentila-options" })
-            @Html.LabelFor(model => model.Lentila.CodProdus)
+            @Html.LabelFor(model => model.Lentila.CodProdus, "Denumire Lentila")
             @Html.ValidationMessageFor(model => model.Lentila.CodProdus, "", new { @class = "text-danger" })
         </div>
     </div>
