--- a/LicentaApp/Views/Shared/Comenzi/TipLentilaOptions.cshtml
+++ b/LicentaApp/Views/Shared/Comenzi/TipLentilaOptions.cshtml
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col m12 input-field">
             @Html.DropDownListFor(model => model.Lentila.TipLentila, (SelectList)ViewData[AppConstants.TipLentilaOptions], "- Selecteaza -", new { @id = "tip-lentila-options" })
-            @Html.LabelFor(model => model.Lentila.TipLentila)
+            @Html.LabelFor(model => model.Lentila.TipLentila, "Tip Lentila")
             @Html.ValidationMessageFor(model => model.Lentila.TipLentila, "", new { @class = "text-danger" })
         </div>
     </div>
