--- a/LicentaApp/Views/Rapoarte/StatisticaMagazinDupaVanzari.cshtml
+++ b/LicentaApp/Views/Rapoarte/StatisticaMagazinDupaVanzari.cshtml
@@ -13,7 +13,7 @@
     </div>
 </div>
 
-@using (Ajax.BeginForm("TopOchelariSoare_Data", "Rapoarte", new AjaxOptions { UpdateTargetId = "report-container", InsertionMode = InsertionMode.Replace }))
+@using (Ajax.BeginForm("StatisticaMagazinDupaVanzari_Data", "Rapoarte", new AjaxOptions { UpdateTargetId = "report-container", InsertionMode = InsertionMode.Replace }))
 {
     @Html.Partial("Rapoarte/_ReportButtons")
 }
