--- a/LicentaApp/Bundles/Content/Custom/Site.css
+++ b/LicentaApp/Bundles/Content/Custom/Site.css
@@ -234,3 +234,18 @@
     width: 50px;
     height: 50px;
 }
+
+.pivot-table tr td:first-child,
+.pivot-table tr th:first-child {
+    background-color: #9694f7;
+}
+
+.all-reports-table tr td:nth-child(2),
+.all-reports-table tr td:nth-child(3) {
+    max-width: 5%;    
+}
+
+.report-icon:hover {
+    transition: color 0.5s;
+    color: #504eb7;
+}
