--- a/LicentaApp/Views/Rapoarte/StatisticaMagazineDupaCantitati.cshtml
+++ b/LicentaApp/Views/Rapoarte/StatisticaMagazineDupaCantitati.cshtml
@@ -5,23 +5,27 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<a href="@Url.Action("StatisticaMagazineDupaCantitati_Grafic")">Grafic</a>
-<table class="highlight">
-    <thead>
-    <tr>
-        <th>Denumire</th>
-        <th>Orasa</th>
-        <th>Cantitate totala</th>
-    </tr>
-    </thead>
-    <tbody>
-    @foreach (var item in this.Model)
-    {
-        <tr>
-            <td>@item.Denumire</td>
-            <td>@item.Oras</td>
-            <td>@item.CantitateTotala</td>
-        </tr>
-    }
-    </tbody>
-</table>
+<div class="row">
+    <div class="col m11">
+        <h4 class="report-title">Statistica Vanzari Magazine in functie de Cantitati</h4>
+    </div>
+    <div class="col m1">
+        <a class="btn-floating btn-large chart-url-icon waves-effect waves-light red" href="@Url.Action("StatisticaMagazineDupaCantitati_Grafic")"><i class="fas fa-chart-bar fa-2x"></i></a>
+    </div>
+</div>
+
+
+@using (Ajax.BeginForm("StatisticaMagazineDupaCantitati_Data", "Rapoarte", new AjaxOptions { UpdateTargetId = "report-container", InsertionMode = InsertionMode.Replace }))
+{
+    @Html.Partial("Rapoarte/_ReportButtons")
+}
+
+<div id="report-container">
+    @Html.Partial("Rapoarte/StatisticaMagazineDupaCantitati_Data", this.Model)
+</div>
+
+@section Scripts{
+    <script type="text/javascript" src="../../Bundles/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+}
+
+
