--- a/LicentaApp/Views/Shared/Navbar.cshtml
+++ b/LicentaApp/Views/Shared/Navbar.cshtml
@@ -27,6 +27,9 @@
         <a href="@Url.Action("ComenziAprovizionareMagazine","ComenziAprovizionare")" class="tooltipped" data-position="right" data-tooltip="Aprovizionare magazine"><i class="fas fa-store fa-2x"></i></a>
     </li>
     <li class="nav-icon-container">
+        <a href="@Url.Action("Index","Rapoarte")" class="tooltipped" data-position="right" data-tooltip="Rapoarte"><i class="fas fa-chart-bar fa-2x"></i></a>
+    </li>
+    <li class="nav-icon-container">
         <a href="@Url.Action("Admin","Home")" class="tooltipped" data-position="right" data-tooltip="Admin"><i class="fas fa-cog fa-2x"></i></a>
     </li>
 </ul>
