--- a/LicentaApp/Views/Shared/Navbar.cshtml
+++ b/LicentaApp/Views/Shared/Navbar.cshtml
@@ -1,36 +1,66 @@
-﻿<nav>
+﻿@using LicentaApp.Domain.Auth
+@{
+    var currentUser = User as AppPrincipal;
+}
+<nav>
     <div class="nav-wrapper">
         <div class="left">
             <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
         </div>
-        @*<ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">JavaScript</a></li>
-        </ul>*@
+        @if (currentUser != null)
+        {
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="sass.html">Bun venit, @(currentUser.Prenume + " " + currentUser.Nume)</a></li>
+                <li><a href="@Url.Action("LogOut", "Account")" class="tooltipped" data-position="bottom" data-tooltip="Log out"><i class="fas fa-sign-out-alt"></i></a></li>
+            </ul>
+        }
+
     </div>
 </nav>
 <ul id="slide-out" class="sidenav sidenav-fixed">
-    <li class="nav-icon-container">
-        <a href="#!" class="tooltipped"  data-position="right" data-tooltip="Profil"><i class="fas fa-user-circle fa-2x"></i></a>
-    </li>
-    <li class="nav-icon-container">
-        <a href="@Url.Action("Index","Produse")" class="tooltipped" data-position="right" data-tooltip="Produse"><i class="fas fa-clipboard-list fa-2x"></i></a>
-    </li>
-    <li class="nav-icon-container">
-        <a href="@Url.Action("Index","Comenzi")" class="tooltipped" data-position="right" data-tooltip="Comenzi"><i class="fas fa-shopping-cart fa-2x"></i></a>
-    </li>
-    <li class="nav-icon-container">
-        <a href="@Url.Action("ComenziAprovizionareFurnizori","ComenziAprovizionare")" class="tooltipped" data-position="right" data-tooltip="Aprovizionare furnizori"><i class="fas fa-truck fa-2x"></i></a>
-    </li>
-    <li class="nav-icon-container">
-        <a href="@Url.Action("ComenziAprovizionareMagazine","ComenziAprovizionare")" class="tooltipped" data-position="right" data-tooltip="Aprovizionare magazine"><i class="fas fa-store fa-2x"></i></a>
-    </li>
-    <li class="nav-icon-container">
-        <a href="@Url.Action("Index","Rapoarte")" class="tooltipped" data-position="right" data-tooltip="Rapoarte"><i class="fas fa-chart-bar fa-2x"></i></a>
-    </li>
-    <li class="nav-icon-container">
-        <a href="@Url.Action("Admin","Home")" class="tooltipped" data-position="right" data-tooltip="Admin"><i class="fas fa-cog fa-2x"></i></a>
-    </li>
-</ul>
+    @if (currentUser != null && (currentUser.IsInRole(AuthConstants.Roluri.Admin) || currentUser.IsInRole(AuthConstants.Roluri.Utilizator)))
+    {
+        <li class="nav-icon-container">
+            <a href="#!" class="tooltipped" data-position="right" data-tooltip="Clienti"><i class="fas fa-user-circle fa-2x"></i></a>
+        </li>
+    }
+    @if (currentUser != null && (currentUser.IsInRole(AuthConstants.Roluri.Admin) || currentUser.IsInRole(AuthConstants.Roluri.Utilizator)))
+    {
+        <li class="nav-icon-container">
+            <a href="@Url.Action("Index","Produse")" class="tooltipped" data-position="right" data-tooltip="Produse"><i class="fas fa-clipboard-list fa-2x"></i></a>
+        </li>
 
+    }
+    @if (currentUser != null && (currentUser.IsInRole(AuthConstants.Roluri.Admin) || currentUser.IsInRole(AuthConstants.Roluri.Utilizator)))
+    {
+        <li class="nav-icon-container">
+            <a href="@Url.Action("Index","Comenzi")" class="tooltipped" data-position="right" data-tooltip="Comenzi"><i class="fas fa-shopping-cart fa-2x"></i></a>
+        </li>
+    }
+
+    @if (currentUser != null && currentUser.IsInRole(AuthConstants.Roluri.Admin))
+    {
+        <li class="nav-icon-container">
+            <a href="@Url.Action("ComenziAprovizionareFurnizori","ComenziAprovizionare")" class="tooltipped" data-position="right" data-tooltip="Aprovizionare furnizori"><i class="fas fa-truck fa-2x"></i></a>
+        </li>
+    }
+    @if (currentUser != null && (currentUser.IsInRole(AuthConstants.Roluri.Admin) || currentUser.IsInRole(AuthConstants.Roluri.Utilizator)))
+    {
+        <li class="nav-icon-container">
+            <a href="@Url.Action("ComenziAprovizionareMagazine","ComenziAprovizionare")" class="tooltipped" data-position="right" data-tooltip="Aprovizionare magazine"><i class="fas fa-store fa-2x"></i></a>
+        </li>
+    }
+
+    @if (currentUser != null && currentUser.IsInRole(AuthConstants.Roluri.Admin))
+    {
+        <li class="nav-icon-container">
+            <a href="@Url.Action("Index","Rapoarte")" class="tooltipped" data-position="right" data-tooltip="Rapoarte"><i class="fas fa-chart-bar fa-2x"></i></a>
+        </li>
+    }
+    @if (currentUser != null && currentUser.IsInRole(AuthConstants.Roluri.Admin))
+    {
+        <li class="nav-icon-container">
+            <a href="@Url.Action("Admin","Home")" class="tooltipped" data-position="right" data-tooltip="Admin"><i class="fas fa-cog fa-2x"></i></a>
+        </li>
+    }
+</ul>
