--- a/LicentaApp/Views/Clienti/Index.cshtml
+++ b/LicentaApp/Views/Clienti/Index.cshtml
@@ -2,21 +2,19 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_PagedLayout.cshtml";
 }
 
-<h2>Index</h2>
+<div class="row">
+    <div class="col s11">
+        <h3>Clienti</h3>
+    </div>
+</div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Nume)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Prenume)
+            Nume
         </th>
         <th>
             @Html.DisplayNameFor(model => model.NumarTelefon)
@@ -27,22 +25,13 @@
         <th>
             @Html.DisplayNameFor(model => model.DataNastere)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DataInregistrare)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Profesie)
-        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Nume)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Prenume)
+            @(item.Nume + " " + item.Prenume)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.NumarTelefon)
@@ -51,18 +40,11 @@
             @Html.DisplayFor(modelItem => item.Email)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.DataNastere)
+            @item.DataNastere.ToString("dd/MM/yyyy")
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.DataInregistrare)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Profesie)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            <a href="@Url.Action("Edit", "Clienti", new {id = item.Id})" class="tooltipped icon-button edit-icon" data-position="bottom" data-tooltip="Editeaza"><i class="fas fa-pencil-alt fa-2x"></i></a>
+            <a href="@Url.Action("Details", "Clienti", new {id = item.Id})" class="tooltipped icon-button view-icon" data-position="bottom" data-tooltip="Detalii"><i class="fas fa-info fa-2x"></i></a>
         </td>
     </tr>
 }
