--- a/LicentaApp/Views/Furnizori/Details.cshtml
+++ b/LicentaApp/Views/Furnizori/Details.cshtml
@@ -5,63 +5,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+@Html.Partial("_TitleUDButtons", new Tuple<string, string, int>("Detalii", "Furnizori", this.Model.Id))
 
-<div>
-    <h4>Furnizori</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Denumire)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Denumire)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NRREGCOMERTULUI)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NRREGCOMERTULUI)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CIF)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CIF)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NumarTelefon)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NumarTelefon)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Adresa)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Adresa)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+@Html.DisplayForModel()
