--- a/LicentaApp/Views/Utilizatori/Details.cshtml
+++ b/LicentaApp/Views/Utilizatori/Details.cshtml
@@ -5,71 +5,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+@Html.Partial("_TitleUDButtons", new Tuple<string, string, int>("Detalii", "Utilizatori", this.Model.Id))
 
-<div>
-    <h4>Utilizatori</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Username)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Username)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Nume)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Nume)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Prenume)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Prenume)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Parola)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Parola)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Magazine.Denumire)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Magazine.Denumire)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Roluri.Denumire)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Roluri.Denumire)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+@Html.DisplayForModel()
