--- a/LicentaApp/Views/Furnizori/Index.cshtml
+++ b/LicentaApp/Views/Furnizori/Index.cshtml
@@ -2,63 +2,55 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_PagedLayout.cshtml";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<div class="row">
+    <div class="col s11">
+        <h3>Furnizori</h3>
+    </div>
+    <div class="col s1">
+        @Html.Partial("_FloatingButton", new Tuple<string, string>(Url.Action("Create", "Furnizori"), "Adauga"))
+    </div>
+</div>
 <table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Denumire)
         </th>
+
         <th>
-            @Html.DisplayNameFor(model => model.NRREGCOMERTULUI)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CIF)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
+            @Html.DisplayNameFor(model => model.Adresa)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.NumarTelefon)
         </th>
+
         <th>
-            @Html.DisplayNameFor(model => model.Adresa)
+            @Html.DisplayNameFor(model => model.Email)
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Denumire)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NRREGCOMERTULUI)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CIF)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumarTelefon)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Adresa)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Denumire)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Adresa)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NumarTelefon)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.Partial("_RUDButtons", new Tuple<int, string>(item.Id, "Furnizori"))
+            </td>
+        </tr>
+    }
 
 </table>
