--- a/LicentaApp/Views/Magazine/Details.cshtml
+++ b/LicentaApp/Views/Magazine/Details.cshtml
@@ -4,48 +4,6 @@
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@Html.Partial("_TitleUDButtons", new Tuple<string, string, int>("Detalii", "Magazine", this.Model.Id))
 
-<h2>Details</h2>
-
-<div>
-    <h4>Magazine</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Denumire)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Denumire)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Oras)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Oras)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Adresa)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Adresa)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+@Html.DisplayForModel()
