--- a/LicentaApp/Views/Magazine/Index.cshtml
+++ b/LicentaApp/Views/Magazine/Index.cshtml
@@ -5,11 +5,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<div class="row">
+    <div class="col s11">
+        <h3>Magazine</h3>
+    </div>
+    <div class="col s1">
+        @Html.Partial("_FloatingButton", new Tuple<string, string>(Url.Action("Create", "Magazine"), "Adauga"))
+    </div>
+</div>
 <table class="table">
     <tr>
         <th>
@@ -42,9 +45,7 @@
             @Html.DisplayFor(modelItem => item.Email)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.Partial("_RUDButtons", new Tuple<int, string>(item.Id, "Magazine"))
         </td>
     </tr>
 }
