--- a/LicentaApp/Views/Home/Admin.cshtml
+++ b/LicentaApp/Views/Home/Admin.cshtml
@@ -34,7 +34,7 @@
             </div>
         </div>
     </div>
-    <div class="col s12 m3">
+    @*<div class="col s12 m3">
         <div class="card setting-card">
             <div class="card-image">
                 <img src="../../Bundles/Content/Images/inventory.png">
@@ -42,7 +42,7 @@
                 <a href="@Url.Action("Index","Inventar")" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
             </div>
         </div>
-    </div>
+    </div>*@
 </div>
 
 <div class="row">
