--- a/LicentaApp/Views/Rapoarte/Index.cshtml
+++ b/LicentaApp/Views/Rapoarte/Index.cshtml
@@ -14,6 +14,11 @@
             <td></td>
         </tr>
         <tr>
+            <td><b>Top vanzari pe oras in functie de profesie</b></td>
+            <td><a href="@Url.Action("TopProfesii")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
+            <td><a href="@Url.Action("TopProfesii_Grafic")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Grafic"><i class="fas fa-chart-bar fa-2x"></i></a></td>
+        </tr>
+        <tr>
             <td><b>Statistica Vanzari Magazine</b></td>
             <td><a href="@Url.Action("StatisticaMagazinDupaVanzari")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
             <td><a href="@Url.Action("StatisticaMagazinDupaVanzari_Grafic")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Grafic"><i class="fas fa-chart-bar fa-2x"></i></a></td>
@@ -23,16 +28,16 @@
             <td><a href="@Url.Action("StatisticaMagazineDupaCantitati")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
             <td><a href="@Url.Action("StatisticaMagazineDupaCantitati_Grafic")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Grafic"><i class="fas fa-chart-bar fa-2x"></i></a></td>
         </tr>
-    <tr>
-        <td><b>Vanzari totale pe luna</b></td>
-        <td><a href="@Url.Action("VanzariTotalePeLuni")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
-        <td></td>
-    </tr>
-        
-    <tr>
-        <td><b>Comparatia vanzarilor magazinelor</b></td>
-        <td></td>
-        <td><a href="@Url.Action("ComparatieMagazineDupaVanzari_Grafic")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Grafic"><i class="fas fa-chart-bar fa-2x"></i></a></td>
-    </tr>
+        <tr>
+            <td><b>Vanzari totale pe luna</b></td>
+            <td><a href="@Url.Action("VanzariTotalePeLuni")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <td><b>Comparatia vanzarilor magazinelor</b></td>
+            <td></td>
+            <td><a href="@Url.Action("ComparatieMagazineDupaVanzari_Grafic")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Grafic"><i class="fas fa-chart-bar fa-2x"></i></a></td>
+        </tr>
     </tbody>
 </table>
