--- a/LicentaApp/Views/Rapoarte/Index.cshtml
+++ b/LicentaApp/Views/Rapoarte/Index.cshtml
@@ -8,18 +8,30 @@
 <table class="all-reports-table">
     <tbody>
 
+
+        <tr>
+            <td><b>Top vanzari lentile soare in functie de cantitatile vandute</b></td>
+            <td><a href="@Url.Action("TopLentileVandute")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td><b>Top vanzari rame in functie de cantitatile vandute</b></td>
+            <td><a href="@Url.Action("TopRameVandute")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
+            <td></td>
+        </tr>
         <tr>
             <td><b>Top vanzari ochelari soare in functie de cantitatile vandute</b></td>
             <td><a href="@Url.Action("TopOchelariSoare_CantitatiVandute")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
             <td></td>
         </tr>
+
         <tr>
             <td><b>Top vanzari pe oras in functie de profesie</b></td>
             <td><a href="@Url.Action("TopProfesii")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
             <td><a href="@Url.Action("TopProfesii_Grafic")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Grafic"><i class="fas fa-chart-bar fa-2x"></i></a></td>
         </tr>
         <tr>
-            <td><b>Statistica Vanzari Magazine</b></td>
+            <td><b>Statistica Vanzari Magazine in functie de Totalul Veniturilor</b></td>
             <td><a href="@Url.Action("StatisticaMagazinDupaVanzari")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
             <td><a href="@Url.Action("StatisticaMagazinDupaVanzari_Grafic")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Grafic"><i class="fas fa-chart-bar fa-2x"></i></a></td>
         </tr>
@@ -29,11 +41,20 @@
             <td><a href="@Url.Action("StatisticaMagazineDupaCantitati_Grafic")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Grafic"><i class="fas fa-chart-bar fa-2x"></i></a></td>
         </tr>
         <tr>
+            <td><b>Statistica Vanzari Utilizatori in functie de Totalul Veniturilor</b></td>
+            <td><a href="@Url.Action("StatisticaUtilizatoriDupaVanzari")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
+            <td><a href="@Url.Action("StatisticaUtilizatoriDupaVanzari_Grafic")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Grafic"><i class="fas fa-chart-bar fa-2x"></i></a></td>
+        </tr>
+        <tr>
+            <td><b>Statistica Vanzari Utilizatori in functie de cantitatile vandute</b></td>
+            <td><a href="@Url.Action("StatisticaUtilizatoriDupaCantitati")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
+            <td><a href="@Url.Action("StatisticaUtilizatoriDupaCantitati_Grafic")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Grafic"><i class="fas fa-chart-bar fa-2x"></i></a></td>
+        </tr>
+        <tr>
             <td><b>Vanzari totale pe luna</b></td>
             <td><a href="@Url.Action("VanzariTotalePeLuni")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
             <td></td>
         </tr>
-
         <tr>
             <td><b>Comparatia vanzarilor magazinelor</b></td>
             <td></td>
