--- a/LicentaApp/Views/ComenziAprovizionare/VizualizeazaComanda.cshtml
+++ b/LicentaApp/Views/ComenziAprovizionare/VizualizeazaComanda.cshtml
@@ -8,6 +8,10 @@
 
 <div class="row">
     <div class="col m9">
+        @if (this.Model.DeLaFurnizorId.HasValue)
+        {
+            <a style="margin-top: 20px;"  href="@Url.Action("DownloadCerereAprovizionare","ComenziAprovizionare", new { idAprovizionare = this.Model.Id })" id="download-cerere-aprovizionare" class="btn-floating btn-small waves-effect waves-light red tooltipped" data-position="bottom" data-delay="50" data-tooltip="Descarca PDF"><i class="fa fa-download" aria-hidden="true"></i></a>
+        }
     </div>
     <div class="col m3">
         @if (this.Model.StatusComanda != StatusComanda.Finalizata)
