--- a/LicentaApp/Views/Rapoarte/Index.cshtml
+++ b/LicentaApp/Views/Rapoarte/Index.cshtml
@@ -55,6 +55,11 @@
             <td><a href="@Url.Action("VanzariTotalePeLuni")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Raport tabelar"><i class="fas fa-table fa-2x"></i></a></td>
             <td></td>
         </tr>
+    <tr>
+        <td><b>Analiza evolutiei pretului unui produs</b></td>
+        <td></td>
+        <td><a href="@Url.Action("IstoricPreturi_Grafic")" class="tooltipped icon-button report-icon" data-position="bottom" data-tooltip="Grafic"><i class="fas fa-chart-bar fa-2x"></i></a></td>
+    </tr>
         <tr>
             <td><b>Comparatia vanzarilor magazinelor</b></td>
             <td></td>
