--- a/LicentaApp/Views/Produse/ListaLentile.cshtml
+++ b/LicentaApp/Views/Produse/ListaLentile.cshtml
@@ -4,7 +4,7 @@
 @model IEnumerable<LentileView>
 @{
     ViewBag.Title = "ListaLentile";
-    Layout = "~/Views/Shared/_PagedLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="row">
@@ -16,55 +16,45 @@
     </div>
 </div>
 
-<table class="table">
-    <tr>
-        <th>
-            Cod
-        </th>
-        <th>
-            Denumire
-        </th>
-        <th>
-            Discount
-        </th>
-        <th>
-            Tip Lentila
-        </th>
-        <th>
-            Indice Refractie
-        </th>
-        <th>
-            Pret
-        </th>
-        <th></th>
-    </tr>
+@using (Ajax.BeginForm("FilterListaLentile", "Produse", new AjaxOptions { UpdateTargetId = "lista-lentile-data", InsertionMode = InsertionMode.ReplaceWith }))
+{
+    @Html.Partial("Produse/ListaLentileData", this.Model)
+}
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cod)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Denumire)
-            </td>
 
-            <td>
-                @Html.DisplayFor(modelItem => item.Discount)
-            </td>
-            <td>
-                @(ProductMetadata.Deserializers.EnumDeserializer<TipLentila>(item.TipLentila).ToHtmlMvcString())
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IndiceRefractie)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Pret)
-            </td>
-            <td>
-                @Html.Partial("_RUDButtons", new Tuple<int, string>(item.Id, "Produse"))
-            </td>
-        </tr>
-    }
 
-</table>
+@section Scripts{
+    <script type="text/javascript" src="../../Bundles/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+            changePage();
+            $('select').formSelect();
+            filtreaza();
+        });
+
+        $(document).ajaxComplete(function () {
+            changePage();
+            $('select').formSelect();
+            filtreaza();
+        });
+
+
+        function changePage() {
+            $('.move-to-page').click(function () {
+                $('#filter_Page').val($(this).attr('target_page'));
+                $('form').submit();
+            });
+        }
+
+        function filtreaza() {
+            $('#filtreaza').click(function() {
+                $('form').submit();
+            });
+        }
+
+
+
+    </script>
+}
+
