--- a/LicentaApp/Views/Magazine/Create.cshtml
+++ b/LicentaApp/Views/Magazine/Create.cshtml
@@ -21,3 +21,14 @@
         </div>
     </div>
 }
+
+
+@section Scripts{
+    <script>
+        $(document).ready(function () {
+            $('input:hidden').each(function (index, element) {
+                $(element).appendTo($(element).parent());
+            });
+        });
+    </script>
+}
